Prevent project text from overflowing out of container, fixes #925 (#943)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,6 +133,7 @@ h3,h4{
 .project{
   border-left: 2px solid;
   padding-left: 8px;
+  word-wrap: break-word;
   h5{
     font-weight: bold;
     font-size: 14px;
